Change the package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dash_css",
+  "name": "@ehsan-afzali-2024/dash_css",
   "version": "0.1.0",
   "private": false,
   "description": "A simple, lite-weight and powerful CSS framework",
